# My_homeworks

DataStructure_Algorithm/Binary_Tree/: HW1_deepth_of_tree.c  HW1_depth_of_tree_2.c  HW2_the_thief.c  temp.c
DataStructure_Algorithm/Binary_Tree/PJ6/: HW1_triverse.c  HW2_broadwidth.c
DataStructure_Algorithm/Final_PJ/pj1/: PJ1报告.docx  pj1.c  test.py
DataStructure_Algorithm/Final_PJ/pj2/: PJ2.docx  pj2.c
DataStructure_Algorithm/Final_PJ/pj3/: Jane.txt  adaptive_huffman_code.c  encoded.hf
DataStructure_Algorithm/Graph/: W7HW1_triverse_dfs.c  W7HW2_triverse_bfs.c  W8HW1_Euler_Circuit.c  W8HW2_minimum_spanning_tree.c  W8HW2_minimum_spanning_tree_copilot.c
DataStructure_Algorithm/List/: 1.c
DataStructure_Algorithm/Queue/: scanf.c  tempCodeRunnerFile.c  week3_hw2.c  week4_hw1.c
DataStructure_Algorithm/Recursion/: 8queen.c  8queen_ForHW.c  Hanoi.c
DataStructure_Algorithm/Stack/: hw1.cpp  hw2.cpp
DataStructure_Algorithm/String/: KMP.c  hw1.c
cpp_c/cpp/Projects/multi_source_debug/: CMakeLists.txt  main.cpp
cpp_c/cpp/Projects/multi_source_debug/Lib/: CMakeLists.txt  grams.cpp  util.cpp
matlab/practice/: pr1.m  pr2.m
matlab/probability_therory/: split_train_test.m
py/: b64.py  hello.py  import base64.py  数据类型.py  数据转换.py
py/Probabilty_Theory/: main.py
py/numpy/: import numpy.py
py/practice/: function.py
py/字符串/: 字符串与数字的转化.py  字符串的表示.py  格式化字符串.py
py/数据运算/: 位运算.py  比较运算.py  算术运算.py  运算优先级.py  逻辑运算.py
py/模块/: hello.py  m1.1.py  m1.2.py  m1.py  m2.py  world.py
py/流程控制/: 分支语句.py  循环语句for.py  循环语句while1.py  水仙花数1.py  水仙花数2.py
py/练习/: 1.py
(+359 files in other folders)
